--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,5 @@
+
+/* ----------------------------------BODY CSS---------------------------------------------------------- */
 * {
     margin: 0;
     padding: 0;
@@ -8,13 +10,17 @@
 body {
     min-height: 100vh;
     width: 100%;
-    background-color: #fff;
+    background-color: #F5F5F5;
     display: flex;
     flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
-
+/*--------------------------------------------------------- END ---------------------------------------------*/
+/*--------------------------------------------------------- NavBAR CSS ------------------------------------*/
 header {
-    color: #711def;
+
+  
     position: fixed;
     top: 0;
     height: 80px;
@@ -27,11 +33,16 @@ header {
     position: relative;
 }
 
+
 header h1 {
+    color: #711def;
     text-transform: uppercase;
     font-size: 1.7em;
     letter-spacing: 1px;
+    margin-right: 0;
 }
+
+
 
 .menu {
     display: flex;
@@ -42,8 +53,10 @@ header h1 {
 }
 
 .menu-list {
+    color: #711def;
     list-style: none;
     display: flex;
+  
 }
 
 .menu-list li {
@@ -53,12 +66,69 @@ header h1 {
     cursor: pointer;
     transition: color 0.3s;
 }
+.menu-list li a{
+    text-decoration: none;
+    color: #711def;
+}
+.menu-list li a:hover{
+    color: #ff5360;
+}
 
 .menu-list li.active,
 .menu-list li:hover {
     color: #ff5360;
 }
+/* ---------------------------------------------------------NavBar CSS END--------------------------------------------- */
+/* back to top */
+.back-to-top {
+    position: fixed;
+    width: 64px;
+    height: 64px;
+    right: 20px;
+    bottom: 20px;
+    border-radius: 50%;
+    background-color: rgba(0, 0, 0, 0.85);
+   
+    cursor: pointer;
+    opacity: 0;
+    transform: scale(0.5) translate3d(0, 50px, 0);
+    transform-origin: 50% 100%;
+    transition: border-color 300ms ease-out, opacity 200ms ease-out, transform 200ms ease-out;
+    box-shadow: rgba(14, 30, 37, 0.12) 0px 2px 4px 0px, rgba(14, 30, 37, 0.32) 0px 2px 16px 0px;
+  }
+  .back-to-top:hover {
+    border: 1px solid #711def;
 
+  }
+  .back-to-top:hover:before {
+    transform: translate3d(0, -2px, 0) rotate(-45deg);
+  }
+  .back-to-top:hover:after {
+    transform: translate3d(0, -2px, 0) rotate(45deg);
+  }
+  .back-to-top:before, .back-to-top:after {
+    display: block;
+    content: "";
+    position: absolute;
+    top: 30px;
+    width: 24px;
+    border-top: 2px solid #868686;
+    transition: transform 175ms ease-out;
+  }
+  .back-to-top:before {
+    left: 12px;
+    transform: rotate(-45deg);
+  }
+  .back-to-top:after {
+    left: 28px;
+    transform: rotate(45deg);
+  }
+  .back-to-top.ks-appear {
+    opacity: 1;
+    transform: scale(1) translate3d(0, 0, 0);
+  }
+
+/* ---------------------------------------------------------HERO SECTION CSS --------------------------------------------*/
 .main {
     flex: 1;
     display: flex;
@@ -70,18 +140,19 @@ header h1 {
 }
 
 .left {
-    max-width: 45%;
+    max-width: 50%;
     padding: 40px 64px;
 }
 
 .right {
     padding: 40px 48px;
+    max-width: 50%;
 }
 
 .title {
     color: #ff5360;
-    font-size: 3.2em;
-    width: 50%;
+    font-size: 2.5em;
+    width: 75%;
     font-weight: bold;
     letter-spacing: 2px;
     margin-bottom: 48px;
@@ -114,9 +185,158 @@ button.cta {
 button.cta:hover {
     opacity: 0.9;
 }
+/*------------------------------------------------------------- HERO SECTION CSS END -----------------------------------------------------*/
+/*------------------------------------------------------------- ABOUT SECTION CSS --------------------------------------------------------*/
+
+.about {
+    flex: 1;
+    display: flex;
+    align-items: center;
+    text-align: center;
+}
+
+.aleft img {
+    width: 100%;
+    padding-left: 1rem;
+}
+
+.aright {
+    text-align: right;
+    max-width: 50%;
+    padding: 40px ;
+    
+}
+.aright h1{
+    text-align: left;
+    color: #ff5360;
+    font-size: 2.5em;
+    width: 85%;
+    font-weight: bold;
+    letter-spacing: 2px;
+    margin-bottom: 48px;
+}
+.aright p{
+    text-align: left;
+    color: #9fb5cc;
+    font-size: 1.1em;
+    letter-spacing: 0.7px;
+    line-height: 32px;
+    margin-bottom: 48px;
+    width: 85%;
+    padding-right: 1rem;
+
+}
+.aleft {
+    padding: 40px 48px;
+    max-width: 50%;
+}
+
+/*-------------------------------------------------------- ABOUT SECTION CSS END --------------------------------------------------*/
+
+/*-------------------------------------------------------- FAQ SECTION CSS --------------------------------------------------------*/
+@import url("https://fonts.googleapis.com/css?family=Lato:400,400i,700");
+
+
+
+.wrapper {
+  width: 60%;
+}
+.faq{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+.faq h1 {
+    padding-top: 3rem;padding-bottom: 1rem;
+    text-align: center;
+    color: #ff5360;
+    font-size: 2.5em;
+    width: 85%;
+    font-weight: bold;
+    letter-spacing: 2px;
+    margin-bottom: 24px;
+ 
+}
+
+.container {
+  background-color:#F5F5F5;
+  color: black;
+  border-radius: 20px;
+  box-shadow: 0 5px 10px 0 rgb(0,0,0,0.25);
+  margin-bottom: 50px ;
+
+}
+
+.question {
+    
+
+  font-size: 1.2rem;
+  font-weight: 600;
+  padding: 20px 80px 20px 20px;
+  position: relative;
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+}
+
+.question::after {
+    
+  content: "\002B";
+  font-size: 2.2rem;
+  position: absolute;
+  right: 20px;
+  transition: 0.2s;
+}
+
+.question.active::after {
+    
+  transform: rotate(45deg);
+}
+
+.answercont {
+  max-height: 0;
+  overflow: hidden;
+  transition: 0.3s;
+  
+}
+
+.answer {
+    border-top:  1px solid #9fb5cc;;
+    color: #9fb5cc;
+
+  padding: 20px 20px 20px 20px;
+  line-height: 1.5rem;
+}
+
+/*-------------------------------------------------------- FAQ SECTION CSS END --------------------------------------------------------*/
+/*--------------------------------------------------------- FOOTER SECTION CSS --------------------------------------------------------*/
+
+footer{
+    padding-top: 2rem;
+    padding-bottom: 2rem;
+    
+}
+.foot {
+    width: 100%;
+    background-color:#AC78FF;
+ 
+    text-align: center;
+    padding: 20px 0;
+  }
+  
+  .foot p {
+    color: #d5bcfa;
+    margin: 0;
+  }
+
+  /*--------------------------------------------------------- FOOTER SECTION CSS END--------------------------------------------------------*/
+
+
+
+
 
 /*  -----    RESPONSIVENESS    -----  */
-
 @media (max-width:800px) {
     header,
     .left,
@@ -126,102 +346,183 @@ button.cta:hover {
     }
 }
 
+
 @media (max-width: 650px) {
+    html {
+        font-size: 14px;
+      }
+    
+/* ------nav bar-------- */
 
-    .main {
-        flex-direction: column;
+
+.menu button {
+ 
+  
+    display: block;
+    width: 40px;
+    height: 40px;
+    border: none;
+    background: transparent;
+    color: #711def;
+    outline: none;
+    font-size: 1.7em;
+    cursor: pointer;
+    z-index: 2;
+}
+
+.menu i.fa-times,
+.menu.opened i.fa-bars {
+    display: none;
+}
+
+.menu.opened i.fa-times,
+.menu i.fa-bars {
+    display: block;
+    animation: enter 0.8s;
+}
+
+@keyframes enter {
+    0% {
+        opacity: 0;
     }
 
-    .left,
-    .right {
-        width: 100%;
-        max-width: 100%;
-        padding: 24px;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
+    100% {
+        opacity: 1;
     }
+}
 
-    .left {
-        font-size: 0.8em;
-    }
+.menu-list {
+    position: fixed;
+    top: 0;
+    right: 0;
+    width: 70%;
+    height: 100%;
+    background-color: #711def;
+font-size: 1rem;
+    padding: 46px;
+    flex-direction: column;
+    align-items: flex-end;
+    padding-top: 80px;
+    transform: translateX(100%);
+    transition: transform 0.5s;
+    opacity: .8;
+}
 
-    .left * {
-        width: 95%;
-        margin-bottom: 32px;
-        text-align: center;
-    }
+.menu-list li {
+    
+    font-size: 1.7em;
+    margin: 32px 0px;
+}
+.menu-list li a{
+    text-decoration: none;
+    color:#F5F5F5;
+}
+.menu-list li a:hover{
+    color: #ff5360;
+}
 
-    button.cta {
-        max-width: 60%;
-    }
+.menu.opened .menu-list {
+    transform: translateX(0);
+}
 
-    .right img {
-        width: 80%;
-    }
+.menu.opened button {
+    color: #fff;
+}
+/* ------nav bar end---- */
+/*-------hero section----*/
+.main {
+    flex-direction: column;
+}
+.title{
+    font-size: 1.5em;
+}
 
-    /* Nav Menu Responsiveness */
+.left,
+.right {
+    width: 100%;
+    max-width: 100%;
+    padding: 24px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
 
-    .menu button {
-        display: block;
-        width: 40px;
-        height: 40px;
-        border: none;
-        background: transparent;
-        color: #711def;
-        outline: none;
-        font-size: 1.7em;
-        cursor: pointer;
-        z-index: 2;
-    }
+.left {
+    font-size: 0.8em;
+}
 
-    .menu i.fa-times,
-    .menu.opened i.fa-bars {
-        display: none;
-    }
+.left * {
+    width: 95%;
+    margin-bottom: 32px;
+    text-align: center;
+}
 
-    .menu.opened i.fa-times,
-    .menu i.fa-bars {
-        display: block;
-        animation: enter 0.8s;
-    }
+button.cta {
+    max-width: 60%;
+}
 
-    @keyframes enter {
-        0% {
-            opacity: 0;
-        }
+.right img {
+    padding-top: 24px;
+    width: 80%;
+}
 
-        100% {
-            opacity: 1;
-        }
-    }
+/*-------hero section end---- */
+/*--------- about------------  */
+.about {
+    flex-direction: column;
+}
+.aleft,.aright{
+    width: 100%;
+    max-width: 100%;
+    padding: 24px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.aright h1{
+    text-align: center;
+    color: #ff5360;
+    font-size: 1.5em;
+    width: 85%;
+    font-weight: bold;
+    letter-spacing: 2px;
+    margin-bottom: 48px;
+}
+.aright p{
+    text-align: center;
+    color: #9fb5cc;
+    font-size: .8em;
+    letter-spacing: 0.7px;
+    line-height: 32px;
+    margin-bottom: 24px;
+    width: 85%;
+    padding-right: .5rem;
+    padding-left: .5rem;
+}
+/*--------- about end------------  */
+/*--------- FAQ------------  */
+.wrapper {
+    width: 80%;
+ 
+  }
+  .faq h1{
+      font-size: 1.5rem;
+      letter-spacing: .7px;
+  }
+  .answer{
+      font-size: .8rem;
+      letter-spacing: .7px;
+  }
+  .question {
+    text-align: left;
+    font-size: 1rem;
+    padding-top: 20px;
+    padding-bottom: 20px;
+padding-left: 20px;
+    padding-right: 35px;
+  }
+/*--------- FAQ end------------  */
+/*--------- footer------------  */
+/*--------- footer end------------  */
 
-    .menu-list {
-        position: fixed;
-        top: 0;
-        right: 0;
-        width: 80%;
-        height: 100%;
-        background-color: #711def;
-        color: #fff;
-        padding: 46px;
-        flex-direction: column;
-        align-items: flex-end;
-        padding-top: 80px;
-        transform: translateX(100%);
-        transition: transform 0.5s;
-    }
-
-    .menu-list li {
-        font-size: 1.7em;
-        margin: 32px 0px;
-    }
-
-    .menu.opened .menu-list {
-        transform: translateX(0);
-    }
-
-    .menu.opened button {
-        color: #fff;
-    }
 }
