--- a/main.css
+++ b/main.css
@@ -177,6 +177,9 @@
     transform: scale(1.05);
   
   }
+  .lout:hover{
+    transform: scale(1.5);
+  }
   .card > div{
     width: 100%;
     height: 100%;
