--- a/src/Auth/login.css
+++ b/src/Auth/login.css
@@ -14,7 +14,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: #08cac0;
+    background-color: #711def;
     column-gap: 30px;
 }
 
@@ -149,24 +149,7 @@ form {
     justify-content: center;
 }
 
-a.facebook {
-    color: #fff;
-    background-color: #4267b2;
-}
 
-a.facebook .facebook-icon {
-    height: 28px;
-    width: 28px;
-    color: #0171d3;
-    font-size: 20px;
-    border-radius: 50%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-color: #fff;
-}
-
-.facebook-icon,
 img.google-img,
 img.github-img {
     position: absolute;
